What's New for OpenJPIP

* : fixed
- : removed
! : changed
+ : added

October 10, 2011
- [antonin] removed obsolete indexer utility
+ [kaori]   enable JPT-stream request from client viewer option

September 30, 2011
+ [kaori] enabled JPP-stream

September 16, 2011
+ [kaori] enabled stateless requests from the opj_viewers

Septempber 1, 2011
* [kaori] changed terminating status of opj_server in debug/non-server mode

August 27, 2011
* [antonin] fixed missing include directory in opj_client/opj_dec_server/CMakeLists.txt

August 26, 2011
* [antonin] fixed cmake and autotools files to reflect recent indexer changes in JPIP
! [kaori] indexer using the latest openjpeg library
* [antonin] fixed cmake and autotools files to reflect recent changes in JPIP
! [kaori] fixed Makefile.nix to load openjpeg library from this archive

August 25, 2011
+ [kaori] added tid request support to JPIP client
+ [kaori] added quit JPIP server request

August 24, 2011
+ [kaori] added cachemodel_manager, which had been managed in target_manager previously
+ [kaori] added tid request support to JPIP server

August 16, 2011
* [antonin] fixed cmake support for openjpip

August 12, 2011
+ [antonin] added cmake support to openjpip

July 6, 2011
* [antonin] JPIP : fixed autotools to work with recent name changes

July 5, 2011
! [kaori] changed parameter, file names, message names regarding JPT-stream to JPIP-stream, which handles also JPP-stream

May 26, 2011
! [antonin] changed Makefile to Makefile.nix to avoid having autotools overwrite them.

May 23, 2011
+ [antonin] added autotools for the 'tools' directory
+ [antonin] added autotools as a build method for jpip (credit to Vincent Torri)

May 10, 2011
! [kaori] opj_viewer removed the xml functions (for users without Xersus2)
+ [kaori] renamed opj_viewer  to opj_viewer_xerces ( needs Xersus2)
! [kaori] Modification of opj_dec_server to be portable to windows  

May 9, 2011